--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
 RewriteCond %{QUERY_STRING} ^_escaped_fragment_=/?(.*)$
-RewriteRule ^(.*)$ /snapshots/%1.html? [NC,L]
+RewriteRule ^(.*)$ snapshots/%1.html? [NC,L]
 
 # -----------------------------------------------------------------------
 # Defining MIME types to ensure the web server actually knows about them.
